// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SaveButton should render correctly when disabled 1`] = `
<button
  className="btn btn-success"
  disabled={true}
  onClick={[MockFunction]}
  style={
    Object {
      "borderRadius": "25px",
      "bottom": "10px",
      "boxShadow": "0 4px 6px 0 rgba(0,0,0,.14), 0 4px 5px rgba(0,0,0,-1)",
      "fontSize": "18px",
      "height": "50px",
      "lineHeight": "1.33",
      "padding": "10px 16px",
      "position": "fixed",
      "right": "10px",
      "width": "50px",
      "zIndex": 1049,
    }
  }
  type="button"
>
  <i
    className="fa fa-check"
  />
</button>
`;

exports[`SaveButton should render correctly when enabled 1`] = `
<button
  className="btn btn-success"
  disabled={false}
  onClick={[MockFunction]}
  style={
    Object {
      "borderRadius": "25px",
      "bottom": "10px",
      "boxShadow": "0 4px 6px 0 rgba(0,0,0,.14), 0 4px 5px rgba(0,0,0,-1)",
      "fontSize": "18px",
      "height": "50px",
      "lineHeight": "1.33",
      "padding": "10px 16px",
      "position": "fixed",
      "right": "10px",
      "width": "50px",
      "zIndex": 1049,
    }
  }
  type="button"
>
  <i
    className="fa fa-check"
  />
</button>
`;
